--- a/views/home.hbs
+++ b/views/home.hbs
@@ -2,9 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Page Title</title>
+    <title>Home page</title>
 </head>
 <body>
+    <h1>First app to deploy on server</h1>
+    <a href="/about">About</a>
     <p>Welcome to {{websiteName}}</p>
 </body>
 </html>
