Link to home and static page

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -7,9 +7,8 @@
 <body>
     <h1>Node js application</h1>
     <p>Right now it supports 2 paths:
-        <li>/ - home page</li>
-        <li>/dummy.html</li>
+        <li><a href="/">Home</li>
+        <li><a href="/dummy.html">Static page</a></li>
     </p>
-    <a href="/">Home</a>
 </body>
 </html>
