Rest apis - CRUD json

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -6,7 +6,8 @@
 </head>
 <body>
     <h1>First app to deploy on server</h1>
-    <a href="/about">About</a>
+    <li><a href="/about">About</a></li>
+    <li><a href="/apis">Rest apis</a></li>
     <p>Welcome to {{websiteName}}</p>
 </body>
 </html>
