add new endpoint to update via req body

--- a/views/restapis.hbs
+++ b/views/restapis.hbs
@@ -8,7 +8,7 @@
     <h1>We support following services</h1>
     <p>
         <li>POST /write - takes a json array and saves it as a json in fileSystem</li>
-        <li>GET /readFile - reads the json file</li>
+        <li>GET /read - reads the json file</li>
         <li>PUT /update - updates a json element by id. Pass in id and other fields to update as query parameters</li>
         <li>DELETE /deleteFile - deletes the json file. Pass in 'data.json' as fileName in query parameters</li>
     </p>
