--- a/views/restapis.hbs
+++ b/views/restapis.hbs
@@ -10,6 +10,7 @@
         <li>POST /write - takes a json array and saves it as a json in fileSystem</li>
         <li>GET /read - reads the json file</li>
         <li>PUT /update - updates a json element by id. Pass in id and other fields to update as query parameters</li>
+		<li>PUT /updateViaBody - updates a json element by id. Pass in id and other fields to update as json in request body</li>
         <li>DELETE /deleteFile - deletes the json file. Pass in 'data.json' as fileName in query parameters</li>
     </p>
     <p>
