following rest standard

--- a/views/restapis.hbs
+++ b/views/restapis.hbs
@@ -5,13 +5,12 @@
     <title>Rest API's Page</title>
 </head>
 <body>
-    <h1>We support following services</h1>
+    <h1>Following endpoints are available</h1>
     <p>
-        <li>POST /write - takes a json array and saves it as a json in fileSystem</li>
+        <li>POST /create - takes a json array and saves it as a json in fileSystem</li>
         <li>GET /read - reads the json file</li>
-        <li>PUT /update - updates a json element by id. Pass in id and other fields to update as query parameters</li>
-		<li>PUT /updateViaBody - updates a json element by id. Pass in id and other fields to update as json in request body</li>
-        <li>DELETE /deleteFile - deletes the json file. Pass in 'data.json' as fileName in query parameters</li>
+		<li>PUT /update - updates a json element by id. Pass in id and other fields to update as json in request body</li>
+        <li>DELETE /delete - deletes the json file</li>
     </p>
     <p>
         Sample json 
