added endpoint for delete By id

--- a/views/restapis.hbs
+++ b/views/restapis.hbs
@@ -10,7 +10,8 @@
         <li>POST /create - takes a json array and saves it as a json in fileSystem</li>
         <li>GET /read - reads the json file</li>
 		<li>PUT /update - updates a json element by id. Pass in id and other fields to update as json in request body</li>
-        <li>DELETE /delete - deletes the json file</li>
+        <li>DELETE /delete/:id - deletes the json element by id</li>
+		<li>DELETE /deleteFile - deletes the entire json file</li>
     </p>
     <p>
         Sample json 
